--- a/python/templates/main_template.html
+++ b/python/templates/main_template.html
@@ -1,13 +1,21 @@
-<!-- This is a template file used by flask render_template() method -->
-<!doctype html>
-<title>Flask Example </title>
-{% if page_name %}
-  <h1>Flask {{page_name}}</h1><br>
-{% else %}
-  <h1>This is a nameless page</h1>
-{% endif %}
+<html>
+  <!-- This is a template file used by flask render_template() method -->
+  <!doctype html>
+  <head>
+    <title>Flask Example </title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/main.css') }}"/> 
+    <!-- <script src="{{ url_for('static',filename='javascriptFileName.js') }}"> </script> -->
+  </head>
 
-<hr>
-<h2>this page was rendered at: {{time_stamp}}</h2>
-<hr>
-<a href="{{page_link}}">{{next_page}}</a>
+  <body>
+    {% if page_name %}
+      <h1>Flask {{page_name}}</h1><br>
+    {% else %}
+      <h1>This is a nameless page</h1>
+    {% endif %}
+    <hr>
+    <h2>this page was rendered at: {{time_stamp}}</h2>
+    <hr>
+    <a href="{{page_link}}">{{next_page}}</a>
+  </body>
+</html>
