added style to the flask app

--- a/python/templates/main_template.html
+++ b/python/templates/main_template.html
@@ -2,8 +2,8 @@
   <!-- This is a template file used by flask render_template() method -->
   <!doctype html>
   <head>
-    <title>Flask Example </title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/main.css') }}"/> 
+    <title>Flask Example </title>    
+    <link rel="stylesheet" type="text/css" href="statics/main.css"/>
     <!-- <script src="{{ url_for('static',filename='javascriptFileName.js') }}"> </script> -->
   </head>
 
